Update BookAuthorSearchStrategy.java